# tides-dxt

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build-dxt.py  coverage.xml  manifest.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: add-tool.md  analyze-tides.md  debug-mcp.md  fix-github-issue.md  package-release.md  run-tests.md  write-github-issue.md
.github/workflows/: ci.yml
scripts/: package-release.py
server/: main.py
server/storage/: tide_storage.py
server/tools/: tide_tools.py
tests/: conftest.py  test_storage.py  test_tide_tools.py
